--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
+    "css-loader": "^0.28.4",
+    "style-loader": "^0.18.2",
     "webpack": "^2.5.1"
   }
 }
