--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "image-webpack-loader": "^3.3.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.5.1"
   }
 }
